--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 
 bck.nfo
 coinlist.nfo
+js/RPCSendRawTrans-funk.php
+js/RPCSendRawTrans-zeit.php
+js/RPCSendRawTrans.php
+api-go-between/privkey.pem
+api-go-between/cert.pem
+js/RPCSendRawTrans-funk.php
+js/RPCSendRawTrans-zeit.php
+js/RPCSendRawTrans.php
+js/RPCSendRawTrans.php
+js/RPCSendRawTrans-zeit.php
+js/RPCSendRawTrans-funk.php
